--- a/faq/solving-zoom-issues.mdx
+++ b/faq/solving-zoom-issues.mdx
@@ -6,8 +6,8 @@ icon: 'text-size'
 
 ### Pop-Up Blockers
 
-If you are using Zoom from your browser, and you have installed pop-up blockers on your browser, then Zoom may fail to
-successfully launch when you join a lesson. You can easily resolve this by allowing pop-ups for Zoom. Here's how to do it:
+If you are using Zoom from your browser, and you have a pop-up blocker installed, Zoom may fail to
+successfully launch when you join a lesson. You can easily resolve this by allowing pop-ups for Zoom. Here's how to do it (depending on your choice of browser):
 
 1. **Chrome**
    - Click the three dots in the upper-right corner, go to **Settings** > **Privacy and security** > **Site settings** > **Pop-ups and redirects**.
@@ -21,6 +21,8 @@ successfully launch when you join a lesson. You can easily resolve this by allow
 3. **Safari**
    - Go to **Safari** > **Preferences** > **Websites** > **Pop-up Windows**.
    - Find `zoom.us` in the list and select **Allow**.
+
+After adjusting the settings, join the lesson again and Zoom should now load successfully.
 
 ### Audio Issues
 
