--- a/payments/payments-intro.mdx
+++ b/payments/payments-intro.mdx
@@ -4,6 +4,14 @@ description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
 
-There are multiple ways you can take payments from your students for lessons with you.
+There are several ways for students to make payments to you for their lessons.
+
+### Lesson Payment Policies
 
 When creating a [lesson template](/templates/lesson-template-intro), you can choose between the following two payment policies:
+
+1. **During Booking**
+Students are required to pay at the time of booking, so lessons cannot be scheduled until payment is made. Students make the payment in TutorOS using debit or credit cards from any country.
+
+2. **After Lesson**
+Payment is required from the student after the lesson. They can make the payment in TutorOS using debit/credit cards from any country or outside the app through direct bank transfer (including Revolut, Venmo, etc.) or cash.
