--- a/payments/payments-intro.mdx
+++ b/payments/payments-intro.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Lesson Payments Intro'
-description: 'Text, title, and styling in standard markdown'
+description: 'Learn how lesson payments work.'
 icon: 'text-size'
 ---
 
