--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -4,4 +4,4 @@ description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
 
-Your current is transferred to your account every Wednesday.
+For lessons payments that are made inside TutorOS, your balance will accumulate, and you current balance is transferred to your account every Wednesday.
