--- a/payments/payments-intro.mdx
+++ b/payments/payments-intro.mdx
@@ -11,7 +11,7 @@ There are several ways for students to make payments to you for their lessons.
 When creating a [lesson template](/templates/lesson-template-intro), you can choose between the following two payment policies:
 
 1. **During Booking.**
-Students are required to pay at the time of booking, so lessons cannot be scheduled until payment is made. Students make the payment in TutorOS using debit or credit cards from any country.
+Students are required to pay at the time of booking, so lessons cannot be scheduled until payment is made. Students make the payment in TutorOS using debit or credit cards from any country. TutorOS uses <a href="https://stripe.com" target="_blank">Stripe</a> to securely process payments from students:
 
 2. **After Lesson.**
 Payment is required from the student after the lesson. They can make the payment in TutorOS using debit/credit cards from any country or outside the app through direct bank transfer (including Revolut, Venmo, etc.) or cash. Your bank details will be emailed to the student once the lesson ends:
