--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Payouts'
-description: 'Text, title, and styling in standard markdown'
+description: 'Learn how lesson payment payouts work.'
 icon: 'text-size'
 ---
 
