--- a/lessons/joining-lesson.mdx
+++ b/lessons/joining-lesson.mdx
@@ -8,8 +8,8 @@ icon: 'text-size'
 
 Once the time is 5 minutes or less before a lesson start time, you can join the lesson by clicking the `Join Lesson` beside that lesson:
 
-
+![Joining Lesson](/images/joining-lesson.png)
 
 You will be directed to the [classroom](/lessons/classroom) screen for the lesson and the Zoom call for the lesson will automatically open.
 
-**Note** that you need to logged into Zoom with the same email address
+**Note** that you need to be logged into Zoom with the same email address as your TutorOS account. See the [Zoom Account](/faq/zoom-account.mdx) page for more details
