--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -4,4 +4,4 @@ description: 'Learn how lesson payment payouts work.'
 icon: 'text-size'
 ---
 
-For lessons payments that are made inside TutorOS, your balance will accumulate, and you current balance is transferred to your account every Wednesday.
+For lessons payments that are made inside TutorOS, your balance will accumulate, and you current balance is transferred to your connected bank account every Wednesday.
