--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -8,12 +8,16 @@ icon: 'text-size'
 
 Once a lesson ends, you can give the student feedback on what they did well in the lesson and how they can improve.
 
-You will receive an email after the lesson containing the link where you can provide your feedback:
+After the lesson, you will receive an email with a link to submit your feedback:
 
-![Give Feedback](/images/give-feedback-1.png)
+![Give Feedback 1](/images/give-feedback-1.png)
 
-You can also leave feedback from the [Lessons](https://platform.tutoros.app/lessons?filter=previous) screen:
+You can also submit feedback from the [Lessons](https://platform.tutoros.app/lessons?filter=previous) screen:
 
-![Give Feedback](/images/give-feedback-2.png)
+![Give Feedback 2](/images/give-feedback-2.png)
 
-In the Feedback screen, 
+On the Feedback screen, complete the two fields and click the `Submit` button to send your feedback:
+
+![Give Feedback 3](/images/give-feedback-3.png)
+
+The student will be notified once your feedback is ready and will be able to view it.
