--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 ### Profile Page Introduction
 
-Your profile page serves as a unique landing page where students can view your details and book lessons with you. You can share the link to your profile directly with your students or post it online wherever you promote your tutoring services.
+Your profile page serves as a unique landing page where students can view your details and book lessons with you. You can share the link to your profile directly with your students (via SMS, WhatsApp, etc.) or post it online wherever you promote your tutoring services.
 
 ### Viewing & Sharing Profile Page
 
