--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -4,3 +4,38 @@ description: 'Learn how to use our lesson classroom'
 icon: 'text-size'
 ---
 
+### Editor Keyboard Shortcuts
+
+Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
+
+#### Content editing keystrokes
+
+| Action                                     | PC                                | Mac                              |
+|--------------------------------------------|-----------------------------------|-----------------------------------|
+| Insert a hard break (a new paragraph)      | `Enter`                           | `Enter`                           |
+| Insert a soft break (a `<br>` element)     | `Shift+Enter`                     | `⇧Enter`                          |
+| Copy selected content                      | `Ctrl+C`                          | `⌘C`                              |
+| Paste content                              | `Ctrl+V`                          | `⌘V`                              |
+| Paste content as plain text                | `Ctrl+Shift+V`                    | `⌘⇧V`                             |
+| Undo                                       | `Ctrl+Z`                          | `⌘Z`                              |
+| Redo                                       | `Ctrl+Y`, `Ctrl+Shift+Z`          | `⌘Y`, `⌘⇧Z`                       |
+| Bold text                                  | `Ctrl+B`                          | `⌘B`                              |
+| Change text case                           | `Shift+F3`                        | `⇧F3` (may require `Fn`)          |
+| Create link                                | `Ctrl+K`                          | `⌘K`                              |
+| Move out of a link                         | `←←`, `→→`                        | `←←`, `→→`                        |
+| Move out of an inline code style           | `←←`, `→→`                        | `←←`, `→→`                        |
+| Select all                                 | `Ctrl+A`                          | `⌘A`                              |
+| Find in the document                       | `Ctrl+F`                          | `⌘F`                              |
+| Copy text formatting                       | `Ctrl+Shift+C`                    | `⌘⇧C`                             |
+| Paste text formatting                      | `Ctrl+Shift+V`                    | `⌘⇧V`                             |
+| Italic text                                | `Ctrl+I`                          | `⌘I`                              |
+| Strikethrough text                         | `Ctrl+Shift+X`                    | `⌘⇧X`                             |
+| Underline text                             | `Ctrl+U`                          | `⌘U`                              |
+| Revert autoformatting action               | `Backspace`                       | `Backspace`                       |
+
+#### Keystrokes that can be used in a list
+
+| Action                    | PC          | Mac          |
+|---------------------------|-------------|--------------|
+| Increase list item indent | `⇥`         | `⇥`          |
+| Decrease list item indent | `Shift+⇥`   | `⇧⇥`         |
