--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -8,7 +8,7 @@ icon: 'text-size'
 
 Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
 
-#### Content editing keystrokes
+**Content editing keystrokes**
 
 | Action                                     | PC                                | Mac                              |
 |--------------------------------------------|-----------------------------------|-----------------------------------|
@@ -33,7 +33,7 @@ Our class notes editor supports various keyboard shortcuts to help you write you
 | Underline text                             | `Ctrl+U`                          | `⌘U`                              |
 | Revert autoformatting action               | `Backspace`                       | `Backspace`                       |
 
-#### Keystrokes that can be used in a list
+**Keystrokes that can be used in a list**
 
 | Action                    | PC          | Mac          |
 |---------------------------|-------------|--------------|
