--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -4,7 +4,23 @@ description: 'Learn how to use our lesson classroom'
 icon: 'text-size'
 ---
 
-### Editor Keyboard Shortcuts
+### Classroom Introduction
+
+The TutorOS classroom consists of the following sections:
+
+- `Class Notes`. This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
+- `Lesson Info`. This section provides basic information about the lesson, including the student’s name and the lesson time.
+- `Student Notes`. This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
+
+### Class Notes Editor
+
+The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply bold or italic formatting, and create bulleted or numbered lists, among other options. To access these features, select a portion of text to display the rich text toolbar (see the image below) or use the keyboard shortcuts listed below.
+
+### Best Practices
+
+Once the lesson concludes and you leave the classroom, the class notes will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended).
+
+### Class Notes Editor Keyboard Shortcuts
 
 Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
 
