--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -14,7 +14,9 @@ The TutorOS classroom consists of the following sections:
 
 ### Class Notes Editor
 
-The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply bold or italic formatting, and create bulleted or numbered lists, among other options. To access these features, select a portion of text to display the rich text toolbar (see the image below) or use the keyboard shortcuts listed below.
+The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply bold or italic formatting, and create bulleted or numbered lists, among other options. To access these features, select a portion of text to display the rich text toolbar or use the keyboard shortcuts listed below.
+
+![Rich Text](/images/classroom-rich-text.png)
 
 ### Best Practices
 
