--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -21,6 +21,8 @@ The class notes editor is a fully featured rich text editor, allowing you to hig
 
 ![Rich Text](/images/classroom-rich-text.png)
 
+**Slash commands**
+
 The slash commands feature lets you execute a predefined command by writing its name or alias directly in the editor. This is useful for when you quickly want to add a new block quote, heading, bulleted list, etc.
 When you type a slash (/), the suggested commands are displayed in a panel next to it. You can also type a phrase after the / to filter the results in the panel and to easily find the desired command.
 
