--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -30,7 +30,7 @@ To access the rich text features, select a portion of text to display the rich t
 The slash commands feature lets you execute a predefined command by writing its name or alias directly in the editor. This is useful for when you quickly want to add a new block quote, heading, bulleted list, etc.
 When you type a slash (/), the suggested commands are displayed in a panel next to it. You can also type a phrase after the / to filter the results in the panel and to easily find the desired command.
 
-![Slash Command](/images/slash-command.png)
+<img height="400" src="/images/slash-command.png" />
 
 ### Best Practices
 
