--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -32,10 +32,6 @@ When you type a slash (/), the suggested commands are displayed in a panel next 
 
 <img height="400" src="/images/slash-command.png" />
 
-### Best Practices
-
-Once the lesson concludes and you leave the classroom, the class notes will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended).
-
 ### Keyboard Shortcuts
 
 Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
@@ -71,3 +67,7 @@ Our class notes editor supports various keyboard shortcuts to help you write you
 |---------------------------|-------------|--------------|
 | Increase list item indent | `⇥`         | `⇥`          |
 | Decrease list item indent | `Shift+⇥`   | `⇧⇥`         |
+
+### Best Practices
+
+Once the lesson concludes and you leave the classroom, the class notes will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended) and before you exit the classroom.
