--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -4,14 +4,16 @@ description: 'Learn how lesson payment payouts work.'
 icon: 'text-size'
 ---
 
-### Payouts
+### How Payouts Work
 
 For lessons payments that are made inside TutorOS, your balance will accumulate and is paid out (i.e. transferred to your connected bank account) daily for UK and EU bank accounts and every Wednesday for accounts in all other countries.
 
 ### Frequently Asked Questions (FAQ)
 
 **1. How long do payments take to reach my bank account?**
+
 Payouts to US, Canada, UK and EU bank accounts arrive the same day. For other countries, delivery typically takes 1-3 days.
 
 **2. Does TutorOS take a commission on each lesson fee?**
+
 No. You will receive the full amount of your lesson fee. If the student pays online using their debit or credit card, a small payment processing fee will be added to the total amount charged to the student.
