--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -8,10 +8,19 @@ icon: 'text-size'
 
 For lessons payments that are made inside TutorOS, your balance will accumulate and is paid out (i.e. transferred to your connected bank account) daily for UK and EU bank accounts and every Wednesday for accounts in all other countries.
 
-**How long do payments take to reach my bank account?**
+### Viewing Payouts
 
+If you are using a UK or EU bank account, you can view your payouts in your Stripe Connect account:
+
+![Stripe Payouts](/images/connect-bank-account-1.png)
+
+If you are using a bank account in all other countries, you can view your payouts in the Billing section in TutorOS:
+
+
+## Frequently Asked Questions (FAQ)
+
+**1. How long do payments take to reach my bank account?**
 Payouts to US, Canada, UK and EU bank accounts arrive the same day. For other countries, delivery typically takes 1-3 days.
 
-**Does TutorOS take a commission on each lesson fee?**
-
-No. You will receive the full amount of your lesson fee. If the student pays online using their debit or credit card, a small payment processing fee will be added to the total amount charged to the student.
+**2. Am I charged a fee for each payout?**
+No. You will receive the full amount of your balance each time it is transferred to your bank account.
