--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -12,10 +12,9 @@ For lessons payments that are made inside TutorOS, your balance will accumulate 
 
 If you are using a UK or EU bank account, you can view your payouts in your Stripe Connect account:
 
-![Stripe Payouts](/images/connect-bank-account-1.png)
+![Stripe Payouts](/images/stripe-payouts.png)
 
 If you are using a bank account in all other countries, you can view your payouts in the Billing section in TutorOS:
-
 
 ## Frequently Asked Questions (FAQ)
 
