--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -14,7 +14,7 @@ If you are using a UK or EU bank account, you can view your payouts in your Stri
 
 ![Stripe Payouts](/images/stripe-payouts.png)
 
-If you are using a bank account in all other countries, you can view your payouts in the Billing section in TutorOS:
+If you are using a bank account in all other countries, you can view your payouts in the [Billing](https://platform.tutoros.app/billing) section in TutorOS.
 
 ## Frequently Asked Questions (FAQ)
 
