--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -12,6 +12,6 @@ To connect your bank account, go to the [Billing](https://platform.tutoros.app/b
 
 ![Connect Bank Account 1](/images/connect-bank-account-1.png)
 
-You will then see the following pop-up, where you are required to set the country where you are based.  by selecting the country where you are based. This should be the country in which your bank account, used for receiving lesson payments, is located:
+You will then see the following pop-up, where you are required to set the country where you are based. This should be the country in which your bank account, used for receiving lesson payments, is located:
 
 ![Connect Bank Account 2](/images/connect-bank-account-2.png)
