--- a/payments/payments-intro.mdx
+++ b/payments/payments-intro.mdx
@@ -10,7 +10,7 @@ There are several ways for students to make payments to you for their lessons.
 
 When creating a [lesson template](/templates/lesson-template-intro), you can choose between the following two payment policies:
 
-1. **During Booking.**
+1. **At Booking.**
 Students are required to pay at the time of booking, so lessons cannot be scheduled until payment is made. Students make the payment in TutorOS using debit or credit cards from any country. TutorOS uses <a href="https://stripe.com" target="_blank">Stripe</a> to securely process payments from students:
 
 ![Online Payment](/images/online-payment.png)
