--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -15,3 +15,9 @@ To connect your bank account, go to the [Billing](https://platform.tutoros.app/b
 You will then see the following pop-up, where you are required to set the country where you are based. This should be the country in which your bank account, used for receiving lesson payments, is located:
 
 ![Connect Bank Account 2](/images/connect-bank-account-2.png)
+
+If you select the UK or any EU country, you will be redirected to the [Stripe Connect](https://stripe.com/connect) sign-up page. Stripe Connect is the platform that TutorOS uses to manage online lesson payments to users in the UK and EU. You will then be prompted to enter your bank account details to complete the setup process.
+
+If you select a country outside the UK or EU, you will be redirected to the Add Bank Details screen, where you can enter your bank information directly. The specific details required will depend on the country you selected. The screenshot below illustrates the process for the United States:
+
+![Connect US Bank Account](/images/connect-us-bank-account.png)
