--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 In order to receive payments for your lessons, you need to first connect your bank account to TutorOS.
 
-### How to Connect Your Bank Account
+## How to Connect Your Bank Account
 
 To connect your bank account, go to the [Billing](https://platform.tutoros.app/billing) section in the app and click the `Connect Bank Account` button:
 
@@ -16,9 +16,13 @@ You will then see the following pop-up, where you are required to set the countr
 
 ![Connect Bank Account 2](/images/connect-bank-account-2.png)
 
+### Inside UK or EU
+
 If you select the UK or any EU country, you will be redirected to the [Stripe Connect](https://stripe.com/connect) sign-up page. Stripe Connect is the platform that TutorOS uses to manage online lesson payments to tutors in the UK and EU. You will then be prompted to enter your bank account details to complete the setup process.
 
 ![Stripe Connect](/images/stripe-connect.png)
+
+### Outside UK or EU
 
 If you select a country outside the UK or EU, you will be redirected to the Add Bank Details screen, where you can enter your bank information directly. The specific details required will depend on the country you selected. The screenshot below illustrates the process for the United States:
 
