--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -4,7 +4,7 @@ description: 'Learn how to connect your external calendar to TutorOS.'
 icon: 'text-size'
 ---
 
-### Overview
+## Overview
 
 In TutorOS, you can connect an external calendar (such as your Gmail or Outlook calendar) so that events from this calendar are automatically displayed in your TutorOS schedule.
 
@@ -12,6 +12,24 @@ This feature is useful for identifying available time slots around external even
 
 Once you connect an calendar, TutorOS will also automatically add any future lesson events to your calendar.
 
-### How to Connect Your Calendar
+## How to Connect Your Calendar
 
-To connect your calendar...
+To connect your calendar, go to the [Schedule](https://platform.tutoros.app/schedule) section in TutorOS and click the `Connect Your Calendar` button:
+
+![Connect Calendar 1](/images/connect-calendar-1.png)
+
+You can then select your calendar provider:
+
+![Connect Calendar 2](/images/connect-calendar-2.png)
+
+### Google
+
+If you use Google Calendar, you will be prompted to select the email address associated with the calendar you wish to connect:
+
+![Connect Google Calendar 1](/images/connect-google-calendar-1.png)
+
+You will then be asked to grant TutorOS to read/write events from your calendar:
+
+![Connect Google Calendar 2](/images/connect-google-calendar-2.png)
+
+### Outlook
