--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -28,7 +28,7 @@ If you use Google Calendar, you will be prompted to select the email address ass
 
 ![Connect Google Calendar 1](/images/connect-google-calendar-1.png)
 
-You will then be asked to grant TutorOS to read/write events from your calendar:
+You will then be asked to grant TutorOS permission to read/write events from your calendar:
 
 ![Connect Google Calendar 2](/images/connect-google-calendar-2.png)
 
