--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -32,4 +32,11 @@ You will then be asked to grant TutorOS permission to read/write events from you
 
 ![Connect Google Calendar 2](/images/connect-google-calendar-2.png)
 
+Click the `Allow` button to complete the process. Your Google calendar events will now be displayed inside your schedule in TutorOS, and future TutorOS lessons
+will autonatically be added to your Google calendar.
+
+![Connect Google Calendar 3](/images/connect-google-calendar-3.png)
+
 ### Outlook
+
+Coming soon!
