--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 ## Overview
 
-In TutorOS, you can connect an external calendar (such as your Google (Gmail) or Outlook calendar) so that events from this calendar are automatically displayed in your TutorOS schedule.
+In TutorOS, you can connect an external calendar (such as your Google/Gmail or Outlook calendar) so that events from this calendar are automatically displayed in your TutorOS schedule.
 
 This feature is useful for identifying available time slots around external events, such as university lectures, personal engagements, etc.
 
