--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -18,7 +18,7 @@ You will then see the following pop-up, where you are required to set the countr
 
 ### Inside UK or EU
 
-If you select the UK or any EU country, you will be redirected to the [Stripe Connect](https://stripe.com/connect) sign-up page. Stripe Connect is the platform that TutorOS uses to manage online lesson payments to tutors in the UK and EU. You will then be prompted to enter your bank account details to complete the setup process.
+If you select the UK or any EU country, you will be redirected to the [Stripe Connect](https://stripe.com/connect) onboarding page. Stripe Connect is the platform that TutorOS uses to manage online lesson payments to tutors in the UK and EU. You will then be prompted to enter your bank account details to complete the setup process.
 
 ![Stripe Connect](/images/stripe-connect.png)
 
