--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'In-Lesson Classroom'
-description: 'Learn how to use our classroom during a lesson'
+title: 'Post-Lesson Classroom'
+description: 'Learn how to use our classroom after a lesson'
 icon: 'text-size'
 ---
 
-## Classroom Introduction
+## Overview
 
-The TutorOS classroom consists of the following sections:
+Once a lesson ends, you can access the summary, transcription and recording of the lesson in the classroom for this lesson:
 
 - `Class Notes`. This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
 - `Lesson Info`. This section provides basic information about the lesson, including the student’s name and the lesson time.
