--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -6,69 +6,33 @@ icon: 'text-size'
 
 ## Overview
 
-Once a lesson ends, you can access the summary, transcription and recording of the lesson in the classroom for this lesson:
-
-- `Class Notes`. This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
-- `Lesson Info`. This section provides basic information about the lesson, including the student’s name and the lesson time.
-- `Resource`. The resource selected for this lesson.
-- `Student Notes`. This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
-
-![Classroom](/images/classroom-tutoros.png)
+Once a lesson ends, you can access the lesson class notes, summary, transcript and recording in the classroom for this lesson:
 
 ## Class Notes Editor
 
-The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply bold or italic formatting, and create bulleted or numbered lists, among other options.
+The class notes that you added throughout this lesson.
 
-### Rich Text
+### Summary
 
-To access the rich text features, select a portion of text to display the rich text toolbar or use the keyboard shortcuts listed below.
+The summary
 
-![Rich Text](/images/classroom-rich-text.png)
+![Summary](/images/classroom-summary.png)
 
-### Slash commands
+### Transcript
 
-The slash commands feature lets you execute a predefined command by writing its name or alias directly in the editor. This is useful for when you quickly want to add a new block quote, heading, bulleted list, etc.
+The transcript... 
 
-When you type a slash (/), the suggested commands are displayed in a panel next to it. You can also type a phrase after the / to filter the results in the panel and to easily find the desired command.
+![Transcript](/images/classroom-transcript.png)
 
-![Slash Command](/images/slash-command-2.png)
+### Recording
 
-### Keyboard Shortcuts
+The recording...
 
-Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
+![Recording](/images/classroom-recording.png)
 
-**Content editing keystrokes**
+### Feedback
 
-| Action                                     | PC                                | Mac                              |
-|--------------------------------------------|-----------------------------------|-----------------------------------|
-| Insert a hard break (a new paragraph)      | `Enter`                           | `Enter`                           |
-| Insert a soft break (a `<br>` element)     | `Shift+Enter`                     | `⇧Enter`                          |
-| Copy selected content                      | `Ctrl+C`                          | `⌘C`                              |
-| Paste content                              | `Ctrl+V`                          | `⌘V`                              |
-| Paste content as plain text                | `Ctrl+Shift+V`                    | `⌘⇧V`                             |
-| Undo                                       | `Ctrl+Z`                          | `⌘Z`                              |
-| Redo                                       | `Ctrl+Y`, `Ctrl+Shift+Z`          | `⌘Y`, `⌘⇧Z`                       |
-| Bold text                                  | `Ctrl+B`                          | `⌘B`                              |
-| Change text case                           | `Shift+F3`                        | `⇧F3` (may require `Fn`)          |
-| Create link                                | `Ctrl+K`                          | `⌘K`                              |
-| Move out of a link                         | `←←`, `→→`                        | `←←`, `→→`                        |
-| Move out of an inline code style           | `←←`, `→→`                        | `←←`, `→→`                        |
-| Select all                                 | `Ctrl+A`                          | `⌘A`                              |
-| Find in the document                       | `Ctrl+F`                          | `⌘F`                              |
-| Copy text formatting                       | `Ctrl+Shift+C`                    | `⌘⇧C`                             |
-| Paste text formatting                      | `Ctrl+Shift+V`                    | `⌘⇧V`                             |
-| Italic text                                | `Ctrl+I`                          | `⌘I`                              |
-| Strikethrough text                         | `Ctrl+Shift+X`                    | `⌘⇧X`                             |
-| Underline text                             | `Ctrl+U`                          | `⌘U`                              |
-| Revert autoformatting action               | `Backspace`                       | `Backspace`                       |
+The feedback you provided to the student after the lesson. This is only displayed once you leave feedback for this lesson. See the [Leaving Feedback](/lessons/leaving-feedback) for more details.
 
-**Keystrokes that can be used in a list**
+![Feedback](/images/classroom-feedback.png)
 
-| Action                    | PC          | Mac          |
-|---------------------------|-------------|--------------|
-| Increase list item indent | `⇥`         | `⇥`          |
-| Decrease list item indent | `Shift+⇥`   | `⇧⇥`         |
-
-### Best Practices
-
-Once the lesson concludes and you leave the classroom, the class notes will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended) and before you exit the classroom.
