--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -6,11 +6,11 @@ icon: 'text-size'
 
 ## Overview
 
-Once a lesson ends, you can access the lesson class notes, summary, transcript and recording in the classroom for this lesson:
+Once a lesson ends, you can access the lesson class notes, summary, transcript and recording in the classroom for this lesson. Each one is described below:
 
-## Class Notes Editor
+### Class Notes
 
-The class notes that you added throughout this lesson.
+The class notes that you added throughout this lesson. These will be locked and therefore can't be edited.
 
 ### Summary
 
