--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -6,7 +6,9 @@ icon: 'text-size'
 
 ## Overview
 
-Once a lesson ends, you can access the lesson class notes, summary, transcript and recording in the classroom for this lesson. Each one is described below:
+Once a lesson ends, you can view the lesson class notes, summary, transcript and recording in the classroom for this lesson. Each one is described below:
+
+## Sections
 
 ### Class Notes
 
