--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -28,6 +28,45 @@ The transcript of the lesson. TutorOS generates accurate transcripts for lessons
 
 ![Transcript](/images/classroom-transcript.png)
 
+The following languages are supported:
+
+- English
+- Bulgarian
+- Catalan
+- Chinese (Mandarin)
+- Chinese (Cantonese)
+- Czech
+- Danish
+- Dutch
+- Estonian
+- Finnish
+- Flemish
+- French
+- German
+- Swiss German
+- Greek
+- Hindi
+- Hungarian
+- Indonesian
+- Italian
+- Japanese
+- Korean
+- Latvian
+- Lithuanian
+- Malay
+- Norwegian
+- Polish
+- Portuguese
+- Romanian
+- Russian
+- Slovak
+- Spanish
+- Swedish
+- Thai
+- Turkish
+- Ukrainian
+- Vietnamese
+
 ### Recording
 
 The recording...
