--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -28,9 +28,8 @@ The transcript of the lesson. TutorOS generates accurate transcripts for lessons
 
 ![Transcript](/images/classroom-transcript.png)
 
-The following languages are supported:
+The supported languages for transcription are as follows:
 
-- English
 - Bulgarian
 - Catalan
 - Chinese (Mandarin)
@@ -38,6 +37,7 @@ The following languages are supported:
 - Czech
 - Danish
 - Dutch
+- English
 - Estonian
 - Finnish
 - Flemish
