--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -6,18 +6,18 @@ icon: 'text-size'
 
 ### Leaving Feedback
 
-Once a lesson ends, you can give the student feedback on what they did well in the lesson and how they can improve.
-
-After the lesson, you will receive an email with a link to submit your feedback:
+Once a the summary, transcript and recording for a completed lesson are ready, you will be notified via email:
 
 ![Give Feedback 1](/images/give-feedback-1.png)
 
-You can also submit feedback from the [Lessons](https://platform.tutoros.app/lessons?filter=previous) screen:
+The email will contain a link to the feedback form. You can also access the feedback form by clicking the `Give Feedback` for a lesson in your [Previous Lessons](https://platform.tutoros.app/lessons?filter=previous):
 
 ![Give Feedback 2](/images/give-feedback-2.png)
 
-On the Feedback screen, complete the two fields and click the `Submit` button to send your feedback:
+The Feedback screen contains the feeback form, consisting of two questions. The lesson class notes, summary, transcript and recording (see here) are also provided, which you can use to review your lesson and also as an aid when leaving your feedback.
 
 ![Give Feedback 3](/images/give-feedback-3.png)
 
-The student will be notified once your feedback is ready and will be able to view it.
+You can complete the two fields and then click the `Submit` button to subut your feedback. The student will then be notified via email and will be able to view the feedback (both in the email and in the student portal).
+
+![Give Feedback 3](/images/give-feedback-4.png)
