--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 ### Leaving Feedback
 
-Once a the summary, transcript and recording for a completed lesson are ready, you will be notified via email:
+Once the summary, transcript and recording for a completed lesson have been generated, you will be notified via email:
 
 ![Give Feedback 1](/images/give-feedback-1.png)
 
