--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -10,11 +10,11 @@ Once the summary, transcript and recording for a completed lesson have been gene
 
 ![Give Feedback 1](/images/give-feedback-1.png)
 
-The email will contain a link to the feedback form. You can also access the feedback form by clicking the `Give Feedback` for a lesson in your [Previous Lessons](https://platform.tutoros.app/lessons?filter=previous):
+The email will contain a link to the feedback form. You can also access the feedback form by clicking the `Give Feedback` button for a lesson in your [Previous Lessons](https://platform.tutoros.app/lessons?filter=previous):
 
 ![Give Feedback 2](/images/give-feedback-2.png)
 
-The Feedback screen contains the feeback form, consisting of two questions. The lesson class notes, summary, transcript and recording (see here) are also provided, which you can use as an aid when filling out your feedback and to review your lesson. 
+The Feedback screen contains the feeback form, consisting of two questions. The lesson class notes, summary, transcript and recording (see [here](lessons/post-lesson-classroom) for more details) are also provided, which you can use as an aid when filling out your feedback and to review your lesson. 
 
 ![Give Feedback 3](/images/give-feedback-3.png)
 
