--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -14,10 +14,14 @@ The email will contain a link to the feedback form. You can also access the feed
 
 ![Give Feedback 2](/images/give-feedback-2.png)
 
-The Feedback screen contains the feeback form, consisting of two questions. The lesson class notes, summary, transcript and recording (see [here](lessons/post-lesson-classroom) for more details) are also provided, which you can use as an aid when filling out your feedback and to review your lesson. 
+The Feedback screen contains the feeback form, consisting of two questions.
+
+The lesson class notes, summary, transcript and recording (see [here](lessons/post-lesson-classroom) for more details) are also provided, which you can use as an aid when filling out your feedback.
 
 ![Give Feedback 3](/images/give-feedback-3.png)
 
-You can fill out the two fields and then click the `Submit` button to subut your feedback. The student will then be notified via email and will be able to view the feedback (both in the email and in the student portal).
+You can fill out the two fields and then click the `Submit` button to submit your feedback.
+
+The student will then be notified via email and will be able to view the feedback (both in the email and in the student portal).
 
 ![Give Feedback 3](/images/give-feedback-4.png)
