--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -12,7 +12,7 @@ Once a lesson ends, you can view the lesson class notes, summary, transcript and
 
 ### Class Notes
 
-The class notes that you added throughout this lesson. These will be locked and therefore can't be edited.
+The class notes that were added throughout this lesson. These will be locked and therefore can't be edited.
 
 ![Class Notes](/images/classroom-class-notes.png)
 
