--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -10,7 +10,7 @@ The TutorOS classroom consists of the following sections:
 
 - `Class Notes`. This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
 - `Lesson Info`. This section provides basic information about the lesson, including the student’s name and the lesson time.
-- `Resource`. The resource selected for this lesson.
+- `Resource`. The resource uploaded for this lesson.
 - `Student Notes`. This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
 
 ![Classroom](/images/classroom-tutoros.png)
