--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -4,28 +4,29 @@ description: 'Learn how to use our classroom during a lesson'
 icon: 'text-size'
 ---
 
-## Classroom Introduction
+## Introduction
 
-The TutorOS classroom consists of the following sections:
+Each lesson on TutorOS takes place in our virtual classoom. Once you enter the classroom, the Zoom call for the lesson will automatically open.
 
-- `Class Notes`. This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
-- `Lesson Info`. This section provides basic information about the lesson, including the student’s name and the lesson time.
-- `Resource`. The resource uploaded for this lesson.
-- `Student Notes`. This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
+The classroom consists of the following sections:
+
+## Sections
+
+### Class Notes Editor
+
+This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
+
+The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply formatting, create lists & tables, upload images & files, add math equations, among other options.
 
 ![Classroom](/images/classroom-tutoros.png)
 
-## Class Notes Editor
-
-The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply bold or italic formatting, and create bulleted or numbered lists, among other options.
-
-### Rich Text
+#### Rich Text
 
 To access the rich text features, select a portion of text to display the rich text toolbar or use the keyboard shortcuts listed below.
 
 ![Rich Text](/images/classroom-rich-text.png)
 
-### Slash commands
+#### Slash commands
 
 The slash commands feature lets you execute a predefined command by writing its name or alias directly in the editor. This is useful for when you quickly want to add a new block quote, heading, bulleted list, etc.
 
@@ -33,7 +34,7 @@ When you type a slash (/), the suggested commands are displayed in a panel next 
 
 ![Slash Command](/images/slash-command-2.png)
 
-### Keyboard Shortcuts
+#### Keyboard Shortcuts
 
 Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
 
@@ -69,6 +70,18 @@ Our class notes editor supports various keyboard shortcuts to help you write you
 | Increase list item indent | `⇥`         | `⇥`          |
 | Decrease list item indent | `Shift+⇥`   | `⇧⇥`         |
 
-### Best Practices
+### Lesson Info
+
+This section provides basic information about the lesson, including the student’s name and the lesson time.
+
+### Resource
+
+The resource uploaded for this lesson. This can be any PDF, doc file (or Google Drive link). For example, it could be an article, a sample Math paper, etc.
+
+### Student Notes
+
+This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
+
+## Best Practices
 
 Once the lesson concludes and you leave the classroom, the class notes will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended) and before you exit the classroom.
