--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -12,7 +12,7 @@ The classroom consists of the following sections:
 
 ## Sections
 
-### Class Notes Editor
+### Class Notes
 
 This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
 
@@ -20,13 +20,27 @@ The class notes editor is a fully featured rich text editor, allowing you to hig
 
 ![Classroom](/images/classroom-tutoros.png)
 
-#### Rich Text
+### Lesson Info
+
+This section provides basic information about the lesson, including the student’s name and the lesson time.
+
+### Resource
+
+The resource uploaded for this lesson. This can be any PDF, doc file (or Google Drive link). For example, it could be an article, a sample Math paper, etc.
+
+### Student Notes
+
+This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
+
+## Class Notes Editor Features
+
+### Rich Text
 
 To access the rich text features, select a portion of text to display the rich text toolbar or use the keyboard shortcuts listed below.
 
 ![Rich Text](/images/classroom-rich-text.png)
 
-#### Slash commands
+### Slash commands
 
 The slash commands feature lets you execute a predefined command by writing its name or alias directly in the editor. This is useful for when you quickly want to add a new block quote, heading, bulleted list, etc.
 
@@ -34,7 +48,7 @@ When you type a slash (/), the suggested commands are displayed in a panel next 
 
 ![Slash Command](/images/slash-command-2.png)
 
-#### Keyboard Shortcuts
+### Keyboard Shortcuts
 
 Our class notes editor supports various keyboard shortcuts to help you write your notes more quickly and easily. Below is a list of the keystrokes supported by our editor:
 
@@ -69,18 +83,6 @@ Our class notes editor supports various keyboard shortcuts to help you write you
 |---------------------------|-------------|--------------|
 | Increase list item indent | `⇥`         | `⇥`          |
 | Decrease list item indent | `Shift+⇥`   | `⇧⇥`         |
-
-### Lesson Info
-
-This section provides basic information about the lesson, including the student’s name and the lesson time.
-
-### Resource
-
-The resource uploaded for this lesson. This can be any PDF, doc file (or Google Drive link). For example, it could be an article, a sample Math paper, etc.
-
-### Student Notes
-
-This section displays any notes the student added before the lesson. For example, a student might write a note such as, “In this lesson, I would like to focus on irregular Spanish verbs.”
 
 ## Best Practices
 
