--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -6,9 +6,9 @@ icon: 'text-size'
 
 ## Introduction
 
-Each lesson on TutorOS takes place in our virtual classoom. Once you enter the classroom, the Zoom call for the lesson will automatically open.
+All lessons on TutorOS takes place in our virtual classoom. Once you enter the classroom, the Zoom call for the lesson will automatically open.
 
-The classroom consists of the following sections:
+Each section of the classroom is described below.
 
 ## Sections
 
