--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -12,7 +12,7 @@ Each section of the classroom is described below.
 
 ## Sections
 
-### Class Notes
+### Class Notes Editor
 
 This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
 
