--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -26,7 +26,7 @@ This section provides basic information about the lesson, including the studentâ
 
 ### Resource
 
-The resource uploaded for this lesson. This can be any PDF, doc file (or Google Drive link). For example, it could be an article, a sample Math paper, etc.
+The resource uploaded for this lesson. This can be a PDF file, a .docx file, or a Google Drive link. For example, it could be an article, a sample math paper, etc.
 
 ### Student Notes
 
